# draughts

./: LICENSE  README.md  draughts.cabal  review.txt  stack.yaml
app/: Main.hs
src/: Draughts.hs  GtkDraughts.hs
test/: QuickCheck.hs  Tests.hs
