name:                draughts
version:             1.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Raf0/draughts#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

data-files:
                    img/*.jpg, img/*.png

library
  hs-source-dirs:      src
  build-depends:       base >= 4 && < 5, mtl, gtk-helpers, template-haskell, process, gtk, gio, glib, array
  default-language:    Haskell2010
  exposed-modules:
                   Draughts
                 , GtkDraughts

executable draughts
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, draughts, mtl, gtk-helpers, template-haskell, process, gtk, gio, glib, array
  default-language:    Haskell2010

test-suite draughts-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  build-depends:       base
                     , draughts, gtk-helpers, HUnit, QuickCheck, test-framework, test-framework-quickcheck2, test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Raf0/draughts
